# hostimg

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
frontend/: package.json  tslint.json
frontend/src/: App.css  App.tsx  Lightbox.css  Lightbox.tsx  Thumbnail.css  Thumbnail.tsx
frontend/src/model/: Gallery.ts  Image.ts
src/: context.rs  db.rs  file.rs  gallery.rs  main.rs  schema.sql  web.rs
src/templates/: gallery.html  layout.html
