[package]
name = "hostimg"
version = "0.1.0"
authors = ["Emil Hernvall <emil@c0la.se>"]
edition = "2018"

[dependencies]
ascii = "0.5.0"
chrono = "0.3.0"
handlebars = "0.15.0"
image = "0.12.3"
lazy_static = "1.3.0"
notify = "4.0.0"
regex = "0.2"
rusqlite = "0.9.5"
serde_json = "1.0.39"
sha2 = "0.4.2"
tiny_http = "0.5"
